[#13438],[#13520],[#13461],[#13525],[#13531],[#13533] & [#13652] Freshfone Bug Fixes
Squashed Commit from freshfonev2

--- a/public/src/fonts/_glyphs.scss
+++ b/public/src/fonts/_glyphs.scss
@@ -4,11 +4,11 @@
 
 @font-face {
   font-family: "glyphs";
-  src: font-url("glyphs_75800162d2d38887288afa700bee24b1.eot");
-  src: font-url("glyphs_75800162d2d38887288afa700bee24b1.eot?#iefix") format("embedded-opentype"),
-       font-url("glyphs_75800162d2d38887288afa700bee24b1.woff") format("woff"),
-       font-url("glyphs_75800162d2d38887288afa700bee24b1.ttf") format("truetype"),
-       font-url("glyphs_75800162d2d38887288afa700bee24b1.svg#glyphs") format("svg");
+  src: url("glyphs_41dc35fc1f90e34a8bfabb6adeedf8c2.eot");
+  src: url("glyphs_41dc35fc1f90e34a8bfabb6adeedf8c2.eot?#iefix") format("embedded-opentype"),
+       url("glyphs_41dc35fc1f90e34a8bfabb6adeedf8c2.woff") format("woff"),
+       url("glyphs_41dc35fc1f90e34a8bfabb6adeedf8c2.ttf") format("truetype"),
+       url("glyphs_41dc35fc1f90e34a8bfabb6adeedf8c2.svg#glyphs") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -16,7 +16,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: "glyphs";
-    src: font-url("glyphs_75800162d2d38887288afa700bee24b1.svg#glyphs") format("svg");
+    src: url("glyphs_41dc35fc1f90e34a8bfabb6adeedf8c2.svg#glyphs") format("svg");
   }
 }
 
@@ -29,6 +29,7 @@
 .ficon-agent-fchat-off:before,
 .ficon-agent-fchat-on:before,
 .ficon-agent-summary:before,
+.ficon-alert:before,
 .ficon-all-streams:before,
 .ficon-android:before,
 .ficon-answer-checked:before,
@@ -296,6 +297,7 @@
 .ficon-agent-fchat-off:before { content: "\f1b0"; }
 .ficon-agent-fchat-on:before { content: "\f1b1"; }
 .ficon-agent-summary:before { content: "\f1bb"; }
+.ficon-alert:before { content: "\f201"; }
 .ficon-all-streams:before { content: "\f102"; }
 .ficon-android:before { content: "\f103"; }
 .ficon-answer-checked:before { content: "\f104"; }
