--- a/public/src/freshfone/client/_client_main.scss
+++ b/public/src/freshfone/client/_client_main.scss
@@ -277,3 +277,11 @@
 .in_active_ongoing_widget {
 	z-index: 1;
 }
+.browser_alert{
+  margin-left: -22px;
+  margin-top: 14px;
+  position: absolute;
+   i{
+    color: #e92c2c;
+   }
+}
